# fastapi-project-study

./: .gitignore  README.md  alembic.ini  pyproject.toml  requirements.txt  study_plan.ipynb
alembic/: env.py  script.py.mako
alembic/versions/: 310ac765367e_initialization.py
appserver/: app.py  db.py
appserver/apps/account/: constants.py  deps.py  endpoints.py  exceptions.py  models.py  schemas.py  utils.py
appserver/apps/calendar/: endpoints.py  exceptions.py  models.py  schemas.py
appserver/libs/datetime/: calendar.py
tests/: conftest.py  test_hello.py
tests/apps/account/: test_endpoints.py  test_login_api.py  test_logout_api.py  test_me_api.py  test_signup.py  test_signup_api.py  test_unregister_api.py  test_update_user_api.py
tests/apps/calendar/: test_calendar.py  test_calendar_api.py
tests/libs/datetime/: test_calendar.py
