[project]
name = "fastapi-meeting-service"
version = "0.1.0"
description = ""
authors = [
    {name = "OKEunsu",email = "esok0617@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "sqlmodel (>=0.0.30,<0.0.31)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
