[project]
name = "fastapi-meeting-service"
version = "0.1.0"
description = ""
authors = [
    {name = "OKEunsu",email = "esok0617@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "sqlalchemy-utc (>=0.14.0,<0.15.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
